fixed reponse overflow bug in conversation view

--- a/client/myStyles.css
+++ b/client/myStyles.css
@@ -744,6 +744,10 @@ img#fullscreenImage {
   width: 100%;
 }
 
+#commentMask {
+  overflow: hidden;
+}
+
 
 /* TOPICS */
 .topicBox {
